--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,20 +48,18 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation 'androidx.activity:activity:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.core:core:1.11.0-beta02'
+
+    // These all fail dependency analysis due to transitive dependencies on their "-android" variants.
+    implementation 'androidx.compose.foundation:foundation:1.5.0-beta02'
+    implementation 'androidx.compose.foundation:foundation-layout:1.5.0-beta02'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha02'
+    implementation 'androidx.compose.runtime:runtime:1.5.0-beta02'
+    implementation 'androidx.compose.ui:ui:1.5.0-beta02'
+    implementation 'androidx.compose.ui:ui-graphics:1.5.0-beta02'
+    implementation 'androidx.compose.ui:ui-text:1.5.0-beta02'
+    implementation 'androidx.compose.ui:ui-unit:1.5.0-beta02'
 }
